--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -23,7 +23,7 @@
         android:background="@android:color/transparent"
         android:layout_columnWeight="1"
         android:textColor="#fff"
-        android:drawableRight="@drawable/student"
+        android:drawableLeft="@drawable/student"
         android:text="Master Mahasiswa">
     </Button>
 
