update menu forex dan cuaca

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -13,9 +13,10 @@
         android:layout_width="wrap_content"
         android:layout_columnWeight="1"
         android:background="@android:color/transparent"
-        android:drawableRight="@drawable/img_teenagers_128"
+        android:drawableRight="@drawable/img_dollar_128"
         android:textColor="#fff"
-        android:text="Master Pemakaian">
+        android:text="Forex Rates"
+        android:id="@+id/forexRateButton">
     </Button>
     <Button
         android:layout_height="wrap_content"
@@ -24,7 +25,18 @@
         android:layout_columnWeight="1"
         android:textColor="#fff"
         android:drawableLeft="@drawable/student"
-        android:text="Master Mahasiswa">
+        android:text="Master Mahasiswa"
+        android:id="@+id/mahasiswaButton">
+    </Button>
+    <Button
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_columnWeight="1"
+        android:background="@android:color/transparent"
+        android:drawableRight="@drawable/img_cuaca_128"
+        android:textColor="#fff"
+        android:text="Weather"
+        android:id="@+id/cuacaButton">
     </Button>
 
 </GridLayout>
